src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>PRM_Partner_Role__c</fullName>
        <description>What role the partner plays in the lead being referred to Guidewire.</description>
        <label>Partner Role</label>
        <picklist>
            <picklistValues>
                <fullName>Request Assistance (Selling Mitchell Products)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide Assistance (Selling Guidewire Products)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Prior_Partner_Contribution_Factor__c</fullName>
        <label>Prior Partner Contribution Factor</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRM_Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Add on- select below</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PRM_RPA_Range__c</fullName>
        <label>RPA Range</label>
        <picklist>
            <controllingField>PRM_Renewal__c</controllingField>
            <picklistValues>
                <fullName>&gt;=1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt; 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_RPA_Value__c</fullName>
        <label>RPA Value</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRM_Referring_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRM_Related_Secondary_Product__c</fullName>
        <label>Related Secondary Product</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Renewal__c</fullName>
        <label>Renewal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_Sales_Lead_Generated__c</fullName>
        <label>Sales Lead Generated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRM_With_Integration__c</fullName>
        <label>With Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PR Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PolicyCenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PolicyCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code_Local_Lang__c</fullName>
        <label>Postal Code (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prefered_Outreach__c</fullName>
        <label>Preferred Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Press_Releases_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Press Releases Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospective_Partner_Type__c</fullName>
        <description>populated by web form based on the lead origin</description>
        <inlineHelpText>What type of partner is this lead interested in applying for</inlineHelpText>
        <label>Prospective Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>PartnerConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SolutionConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect - Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PartnerConnect - Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Age_of_Legacy_Product__c</fullName>
        <description>Used by the RFI form on our corporate website</description>
        <label>RFI Age of Legacy Product</label>
        <picklist>
            <picklistValues>
                <fullName>2006 or newer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002 - 2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997 - 2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996 or older</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Budget__c</fullName>
        <description>Used for RFI web form</description>
        <label>RFI Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFI_Current_Legacy_Product__c</fullName>
        <label>RFI Current Legacy Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_GW_Product_Interest__c</fullName>
        <description>Used by the RFI Web form on our corporate site</description>
        <label>RFI GW Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>RFI_LOB__c</fullName>
        <description>Used by the RFI web form on our corporate site.</description>
        <label>RFI - LOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Parent_Company__c</fullName>
        <label>RFI Parent Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Project_Start__c</fullName>
        <description>Used for the RFI Request Web Form</description>
        <label>RFI Project Start</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Call_From_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Call From Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_ID__c</fullName>
        <label>SFDC Campaign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Campaign_Status__c</fullName>
        <label>SFDC Campaign Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Description__c</fullName>
        <inlineHelpText>Please give us a complete solution description</inlineHelpText>
        <label>Solution Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Starter_Kit__c</fullName>
        <label>Starter Kit</label>
        <picklist>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO/COO/Pres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Provence_Local_Lang__c</fullName>
        <label>State/Provence (Local Lang)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <picklist>
            <picklistValues>
                <fullName>Claims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO/COO/Pres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as part of the subscription management process.  This is a hidden field.</description>
        <label>Subscription Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <description>Customer Testimonials</description>
        <label>Testimonials</label>
        <picklist>
            <picklistValues>
                <fullName>Canal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suncorp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Street America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominion</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Web_Seminar_Archive__c</fullName>
        <label>Web Seminar Archive</label>
        <picklist>
            <picklistValues>
                <fullName>ClaimCenter 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combating Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementing ClaimCenter - Merastar CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Claims System - Suncorp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy System Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paperless Claims Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter - Next Gen Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider Best Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilizing Tech for Effective Workers CCM</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Invitations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webinar Invitations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Whitepapers__c</fullName>
        <label>Whitepapers</label>
        <picklist>
            <picklistValues>
                <fullName>Tailored whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieving underwriting excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improving Claims Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTG: Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieving Claims Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precision-Underwriting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__AddressStatus__c</fullName>
        <label>Address Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not checked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsed but not found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambiguous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country Lookup</label>
        <referenceTo>pw_cc__CountryObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pw_cc__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pw_cc__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__StateLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Lookup</label>
        <referenceTo>pw_cc__State__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zip/Postal Code Lookup</label>
        <referenceTo>pw_cc__ZipCode__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AD_to_Decide</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>For AD to Decide</value>
        </filters>
        <label>*AD to Decide</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AD_to_Decide1</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Do_Not_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>*AD to Decide</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_Leads_To_Convert</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>equals</operation>
            <value>Australia,New Zealand,AU,NZ</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>.au,.nz</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>notEqual</operation>
            <value>United States,US,Japan,Singapore,Korea,Hong Kong</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>*ANZ Leads To Convert</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Leads</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Lead_Source_Most_Recent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2012 12:00 AM</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Allleads_d_2</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>mkto_si__Last_Interesting_Moment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Leads_EMEA</fullName>
        <booleanFilter>1 OR 2 OR 3 or 4 or 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Lead_Source_Most_Recent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@allianz.co.uk,@aviva.co.uk,@beazley.com,@cnaeurope.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@directline.com,@rbs.co.uk,@homeserve.com,@lv.com,@nfumutual.co.uk</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>@uk.qbe.com,@rbs.co.uk,@uk.zurich.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>equals</operation>
            <value>rob.adsley@catlin.com,gabriella.diana@catlin.com</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
            <value>Genworth Financial (UK),Liberty International Underwriters Europe</value>
        </filters>
        <label>Customer Leads EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DACH_Leads_to_Convert</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>contains</operation>
            <value>Germany,Deutschland,Switzerland,Austria,Österreich,Schweiz</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>contains</operation>
            <value>.de,.ch,.at</value>
        </filters>
        <filters>
            <field>LEAD.COUNTRY</field>
            <operation>notContain</operation>
            <value>Belgium,NL,IN,SG,AU,Australia,United States,USA,France,United Kingdom,UK,FR,Lux</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>*DACH Leads to Convert</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>